--- a/templates/db.html
+++ b/templates/db.html
@@ -314,7 +314,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     color: #ffffff;
-    color: #1C1A1C;
+    /* color: #1C1A1C; */
 }
 
 .sidebar.collapsed {
@@ -332,7 +332,7 @@ body {
     cursor: pointer;
     margin: 10px;
     color: #ffffff;
-    color: #1C1A1C;
+    /* color: #1C1A1C; */
 }
 
 .sidebar ul {
@@ -356,7 +356,7 @@ body {
     align-items: center;
     text-decoration: none;
     color: #ffffff;
-    color: #1C1A1C;
+    /* color: #1C1A1C; */
     width: 100%;
 }
 
@@ -377,7 +377,7 @@ body {
     padding: 15px 20px;
     font-size: 12px;
     color: #bbbbbb;
-    color: #1C1A1C;
+    /* color: #1C1A1C; */
     text-transform: uppercase;
 }
 
@@ -396,7 +396,7 @@ body {
     align-items: center;
     text-decoration: none;
     color: #ffffff;
-    color: #1C1A1C;
+    /* color: #1C1A1C; */
     font-weight: 400;
 }
 
@@ -614,7 +614,7 @@ h1 b {
 .pitch{
 
     border: #ffffff20 solid 1px;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     /* background: rgba(0, 0, 0, 0.2); */
     color: #fff;
     color: #1C1A1C;
@@ -629,7 +629,7 @@ h1 b {
     padding: 0;
     /* border: #08080820 solid 1px; */
     /* border: #cc0000 solid 1px; */
-    border-radius: 10px;
+    /* border-radius: 10px; */
     /* background: rgba(163, 18, 18, 0.2); */
     color: #fff;
     color: #1C1A1C;
@@ -678,10 +678,10 @@ h1 b {
     display: block;
     width: 200px;
     border: none;
-    border-bottom: 1px solid #515151;
+    border-bottom: 1px solid #a0a0a0;
     background: transparent;
     color: white;
-    color: #1C1A1C;
+    /* color: #1C1A1C; */
   }
   
   .wave-group .input:focus {
@@ -689,8 +689,8 @@ h1 b {
   }
   
   .wave-group .label {
-    color: #999;
-    color: #1C1A1C;
+    color: #ffffff;
+    /* color: #1C1A1C; */
     font-size: 18px;
     font-weight: normal;
     position: absolute;
@@ -752,13 +752,25 @@ h1 b {
             color: #1C1A1C;
         }
         table, th, td {
-            border: 1px solid black;
+            /* border: 1px solid white; */
+            /* background-color: #000980; */
+            border-bottom: 1px solid #a0a0a030;
+            /* border-bottom: wh; */
             color: #1C1A1C;
+            color: white;
+            border-radius: 10px;
+            /* margin-inline: 1em; */
+            /* width: 96%; */
+            margin-top: 1em;
+            /* align-self: center; */
+            /* justify-self: center; */
         }
         th, td {
             padding: 10px;
             text-align: left;
             color: #1C1A1C;
+            color: white;
+            border-radius: 10px;
         }
         .slide{
             width: 100%;
@@ -797,6 +809,7 @@ h1 b {
     margin-top: 0;
     overflow-y: auto;
     overflow-x: hidden;
+    background: rgb(5, 1, 24);
 }
         /* Custom scrollbar styles */
         .pitch-col::-webkit-scrollbar {
@@ -819,11 +832,11 @@ h1 b {
   height: 100%;
   /* padding: 1em; */
   border-radius: 10px;
-  border: #ffffff20 solid 1px;
+  border: #ffffff00 solid 1px;
   border-radius: 10px;
-  background: rgba(0, 0, 0, 0);
+  background: rgb(5, 1, 24);
   color: #fff;
-  color: #1C1A1C;
+  /* color: #1C1A1C; */
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.6);
   box-shadow: 
         0 1px 3px rgba(0, 0, 0, 0.12), 
@@ -833,8 +846,8 @@ h1 b {
 }
 
 .pitch-input::placeholder {
-  color: #ffffff90;
-  color: #1C1A1C;
+  color: #ffffff;
+  /* color: #1C1A1C; */
 }
 
 .send{
@@ -897,7 +910,8 @@ h1 b {
 .cyberpunk-checkbox-label {
   font-size: 18px;
   color: #fff;
-  color: #1C1A1C;
+  font-weight: 100;
+  /* color: #1C1A1C; */
   cursor: pointer;
   user-select: none;
   display: flex;
@@ -1089,9 +1103,16 @@ h1 b {
         }
         .sidebar {
             width: 250px;
-            background: rgba(255, 255, 255, 0.1);
-            border-right: 1px solid rgba(255, 255, 255, 0.1);
+            background: rgb(9, 1, 26);
+            /* border-right: 1px solid rgba(255, 255, 255, 0.1); */
+            box-shadow: 
+        0 1px 3px rgba(0, 0, 0, 0.12), 
+        0 2px 2px rgba(0, 0, 0, 0.24), 
+        0 5px 5px rgba(0, 255, 255, 0.5), 
+        0 5px 5px rgba(255, 0, 255, 0.5);
+
             backdrop-filter: blur(10px);
+            color: #f7f5f7;
         }
         .sidebar.collapsed {
             width: 80px;
@@ -1109,7 +1130,7 @@ h1 b {
             align-items: center;
         }
         .sidebar ul li.active{
-          background-color: rgba(255, 255, 255, 0.6);
+          background-color: rgb(144, 21, 201);
         }
          .sidebar .noHover:hover {
             background-color: rgba(255, 255, 255, 0.2);
@@ -1119,7 +1140,7 @@ h1 b {
             align-items: center;
             text-decoration: none;
             color: #ffffff;
-            color: #1C1A1C;
+            color: #f7f5f7;
             width: 100%;
         }
         .main-content {
@@ -1354,13 +1375,13 @@ h1 b {
             
             <ul>
                 <li onclick="toggleSidebar()" ><a href="#"><i class="fi fi-rs-burger-menu"></i><span>VoltMail</span></a></li>
+                <li class="tools-header">Menu</li>
                 <li class="active" onclick="loadContent('home')" class="noHover"><a href="#"><i class="fi fi-br-house-blank"></i> <span>Home</span></a></li>
-                <li onclick="loadContent('accountSettings')" class="noHover"><a href="#"><i class="fi fi-rr-user-pen"></i> <span>Account Settings</span></a></li>
-                <li onclick="loadContent('supportResources')" class="noHover"><a href="#"><i class="fi fi-rr-customer-service"></i> <span>Support and Resources</span></a></li>
-                <li class="tools-header">Tools</li>
                 <li onclick="loadContent('myAccount')" class="noHover"><a href="#"><i class="fi fi-bs-pulse"></i> <span>My Usage</span></a></li>
                 <li onclick="loadContent('myAccount')" class="noHover"><a href="#"><i class="fi fi-rr-credit-card"></i> <span>Billing</span></a></li>
-                
+                <li class="tools-header">Tools</li>
+                <li onclick="loadContent('accountSettings')" class="noHover"><a href="#"><i class="fi fi-rr-user-pen"></i> <span>Account Settings</span></a></li>
+                <li onclick="loadContent('supportResources')" class="noHover"><a href="#"><i class="fi fi-rr-customer-service"></i> <span>Support and Resources</span></a></li>
             </ul>
         </div>
         <div class="logout sidebarItem">
@@ -2179,79 +2200,46 @@ async function sendMessage(sender, to, subject, messageText) {
         <!-- </div>
     </div> -->
 
-
-    <!-- Hidden Content Divs -->
-    <div id="settings-content" style="display: none;">
-        <h1>Settings</h1>
-        <form>
-            <!-- Settings form content -->
-            <label for="theme">Theme:</label>
-            <select id="theme" name="theme">
-                <option value="light">Light</option>
-                <option value="dark">Dark</option>
-            </select>
-            <br><br>
-            <label for="notifications">Notifications:</label>
-            <input type="checkbox" id="notifications" name="notifications" checked>
-            <br><br>
-            <button type="submit" class="buttons">Save</button>
-        </form>
-    </div>
-
-    <div id="manageUser-content" style="display: none;">
-        <h1>Manage User</h1>
-        <form>
-            <!-- Manage User form content -->
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" value="{{ name }}">
-            <br><br>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" value='{{ email }}'>
-            <br><br>
-            <button type="submit" class="buttons">Save</button>
-        </form>
-    </div>
-
-    <div id="help-content" style="display: none;">
-        <h1>Help</h1>
-        <p>If you need help, please contact our support team at <a href="mailto:support@example.com">support@example.com</a>.</p>
-    </div>
-
-    <div id="analytics-content" style="display: none;">
-        <h1>Analytics Dashboard</h1>
-        <canvas id="myChart" width="400" height="200"></canvas>
-    </div>
-
     <div id="myAccount-content" style="display: none;">
       <div class="dashboard">
-          <h1 class="section-header">Dashboard</h1>
+          <h1>Dashboard</h1>
+          <h4>A detailed overview of your metrics, usage, plan and more</h4>
           <div class="metrics">
               <div class="metric">
+
+                  <p class="metric-label"><i class="fi fi-rr-credit-card"></i>Potential Clients</p>
                   <h2 class="metric-value">11</h2>
-                  <p class="metric-label">Potential Clients</p>
               </div>
               <div class="metric">
+
+                  <p class="metric-label"><i class="fi fi-rr-credit-card"></i>Pipeline Value</p>
                   <h2 class="metric-value">$847</h2>
-                  <p class="metric-label">Pipeline Value</p>
               </div>
               <div class="metric">
+
+                  <p class="metric-label"><i class="fi fi-rr-credit-card"></i>Appointments</p>
                   <h2 class="metric-value">5</h2>
-                  <p class="metric-label">Appointments</p>
               </div>
               <div class="metric">
+                  <p class="metric-label"><i class="fi fi-rr-credit-card"></i>Total Sales</p>
                   <h2 class="metric-value">$148.94</h2>
-                  <p class="metric-label">Total Sales</p>
               </div>
           </div>
+          <!-- <div class="row-2"> -->
           <div class="plan-usage">
               <h2 class="sub-header">Plan Usage</h2>
               <p class="plan-usage-detail">{{ total_emails }} of {{plan_emails}} emails / mo</p>
-              <div class="progress-bar">
-                  <div class="progress" style="width: 57.3%;"></div>
+              <div class="progress-text">
+                <p>Current: 2</p>
+                <p>Total: 1000</p>
               </div>
-              <button class="buttons">Upgrade</button>
+              <div class="progress-bar">
+                  <div id="progress" style="width: 57.3%;"></div>
+              </div>
+              <button class="actual-buttons" id="subscription">Upgrade</button>
           </div>
-          <div class="subscription">
+
+          <!-- <div class="subscription">
               <h2 class="sub-header">Subscription</h2>
               <p>Paid $19.99 / mo</p>
               <div class="subscription-features">
@@ -2262,9 +2250,10 @@ async function sendMessage(sender, to, subject, messageText) {
                       <li>Automated Emails</li>
                   </ul>
               </div>
-              <button class="buttons">Change Plan</button>
-          </div>
-          <div class="recent-transactions">
+              <button class="buttons">Change Plan</button> -->
+          <!-- </div> -->
+        </div>
+          <!-- <div class="recent-transactions">
               <h2 class="sub-header">Recent Transactions</h2>
               <div class="transaction">
                   <p>BESTCOOKIECO.COM</p>
@@ -2274,12 +2263,12 @@ async function sendMessage(sender, to, subject, messageText) {
                   <p>BESTCOOKIECO.COM</p>
                   <p>$77</p>
               </div>
-          </div>
+          </div> -->
       </div>
   </div>
             
     <!-- Account Settings Section -->
-    <div id="accountSettings-content" style="display: none;">
+    <!-- <div id="accountSettings-contents" style="display: none;">
         <div class="account-settings">
             <h1 class="section-header">Account Settings</h1>
             <div class="section">
@@ -2300,10 +2289,34 @@ async function sendMessage(sender, to, subject, messageText) {
                 <button class="buttons">Edit Settings</button>
             </div>
         </div>
-    </div>
+    </div> -->
+
+    <div id="accountSettings-content" style="display: none;">
+      <div class="dashboard">
+          <h1>Account Settings</h1>
+          <h4>Here you can edit your account settings, such as the name your email is sent from.</h4>
+          <div class="row-2">
+          <div class="plan-usage as">
+              <h2 class="sub-header">Profile Details</h2>
+              <p class="plan-usage-detail">Add or Update your information</p>
+              <h4>User Name (used as the sender name in email)</h4>
+              <input type="text" id="name" placeholder="{{ name }}">
+              <h4>Login Email</h4>
+              <input type="text" id="forgotEmail" placeholder="{{ email }}">
+              <button class="actual-buttons" id="subscription">Save User Details</button>
+          </div>
+          <div class="plan-usage as pwrd">
+            <h2 class="sub-header">Password</h2>
+            <input type="text" id="password" placeholder="New Password">
+            <input type="text" id="confirmpassword" placeholder="Confirm Password">
+            <button class="actual-buttons" id="subscription">Change Password</button>
+          </div>
+          </div>
+        </div>
+      </div>
 
     <!-- Support and Resources Section -->
-    <div id="supportResources-content" style="display: none;">
+    <div id="supportResourcess-content" style="display: none;">
         <div class="support-resources">
             <h1 class="section-header">Support and Resources</h1>
             <div class="section">
@@ -2325,11 +2338,35 @@ async function sendMessage(sender, to, subject, messageText) {
         </div>
     </div>
 
+    <!-- Support and Resources Section -->
+    <div id="supportResources-content" style="display: none;">
+      <div class="dashboard">
+          <h1>Support and Resources</h1>
+          <!-- <h4>Here you can edit your account settings, such as the name your email is sent from.</h4> -->
+          <div class="plan-usage">
+            <h2 class="sub-header">Help Center</h2>
+            <p>Find answers to common questions in our <a href="#">Help Center</a>.</p>
+        </div>
+        <div class="plan-usage">
+            <h2 class="sub-header">Contact Support</h2>
+            <p>If you need further assistance, you can contact our support team via:</p>
+            <ul>
+                <li>Email: <a href="mailto:support@example.com">support@example.com</a></li>
+                <li>Phone: +123456789</li>
+            </ul>
+        </div>
+        <div class="plan-usage">
+            <h2 class="sub-header">FAQs</h2>
+            <p>Check out our <a href="#">Frequently Asked Questions</a> for more information.</p>
+        </div>
+        </div>
+      </div>
+
     <style>
       body {
     font-family: Arial, sans-serif;
-    background-color: #fff;
-    color: #1C1A1C;
+    background-color: #040120;
+    color: #dad5da;
     margin: 0;
     display: flex;
     justify-content: center;
@@ -2339,8 +2376,9 @@ async function sendMessage(sender, to, subject, messageText) {
 
 .dashboard {
   align-self: center;
-  justify-self: center;
+  justify-self: start;
     background-color: #fff;
+    background-color: #040120;
     padding: 20px;
     margin-top: 2em;
     border-radius: 10px;
@@ -2352,74 +2390,138 @@ async function sendMessage(sender, to, subject, messageText) {
 .section-header {
     font-size: 24px;
     margin-bottom: 20px;
-    color: #333;
+    color: #ffffff;
+    justify-self: start;
+}
+.dashboard h4{
+  font-weight: 200;
 }
 
 .metrics {
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
+    align-items: center;
+    justify-items: space-between;
+    flex-direction: row;
     margin-bottom: 20px;
+    width: 100%;
+    /* border:  red 1px solid; */
 }
 
 .metric {
-    background-color: #f9f9f9;
-    padding: 20px;
+  background: rgb(5, 1, 24);
+    padding-block: 25px;
+    padding-inline-start: 20px;
     border-radius: 10px;
-    text-align: center;
+    text-align: start;
     flex: 1;
-    margin: 0 10px;
+    margin-right: 10px;
 }
 
 .metric-value {
-    font-size: 32px;
+    font-size: 45px;
     margin: 0;
-    color: #333;
+    color: #f3ecec;
 }
 
 .metric-label {
-    font-size: 14px;
-    color: #666;
+    font-size: 20px;
+    font-weight: bold;
+    color: #ece6e6;
+    
+}
+
+.metric-label i{
+  margin-right : 15px;
+}
+.row-2{
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
+  flex-direction: row;
+  width: 100%;
+  gap: 10px;
 }
 
 .plan-usage, .subscription, .recent-transactions {
     margin-bottom: 20px;
-}
+    background: rgb(5, 1, 24);
+    /* padding-block: 25px;
+    padding-inline-start: 20px; */
+    border-radius: 10px;
 
+    /* width: 50%; */
+    /* padding: 50px; */
+}
+.as{
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  width: 50%;
+}
+.as button{
+  margin-top: 2em;
+}
+.pwrd input{
+  margin-block: 2em;
+}
 .sub-header {
-    font-size: 20px;
-    margin-bottom: 10px;
-    color: #333;
-}
 
+  margin-top: 30px;
+    margin-bottom: 10px;
+    font-size: 30px;
+    color: #fff;
+}
+.plan-usage{
+  /* width: 100%; */
+  padding: 20px ;
+  color: #fff;
+}
 .plan-usage-detail {
     font-size: 14px;
     color: #666;
     margin-bottom: 10px;
+    margin-top: 0;
 }
 
 .progress-bar {
-    background-color: #e0e0e0;
+  margin-top: 0;
+  padding-top: 0;
+    background-color: #08022b77;
     border-radius: 5px;
     overflow: hidden;
-    height: 10px;
-    margin-bottom: 10px;
+    height: 20px;
+    margin-bottom: 2em;
+}
+.progress-text{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 20px;
+}
+#progress {
+    background-color: #150552;
+    border-radius: 5px;
+    height: 100%;
 }
 
-.progress {
-    background-color: #4caf50;
-    height: 10px;
+#subscription{
+  background-color: #150552;
 }
-
-.buttons {
+.actual-buttons {
     background-color: #007bff;
     color: white;
     border: none;
-    padding: 10px 20px;
+    /* padding: 10px 20px; */
+    padding: 0.6em 0.5em;
+    margin-right: 12em;
     border-radius: 5px;
     cursor: pointer;
 }
 
-.buttons:hover {
+.actual-buttons:hover {
     background-color: #0056b3;
 }
 
@@ -2434,6 +2536,24 @@ async function sendMessage(sender, to, subject, messageText) {
     border-bottom: 1px solid #e0e0e0;
 }
 
+.plan-usage input {
+            margin-bottom: 0.5em;
+            padding: 0.6em 0.5em;
+            margin-right: 10em;
+            font-size: 1em;
+            border: 1px solid #ffffff60;
+            background-color: #02021E00;
+            border-radius: 5px;
+            transition: border-color 0.3s;
+            color: #fff;
+        }
+    .plan-usage input::placeholder{
+          color: white;
+        }
+
+.support-resources{
+  background-color: #02021E;
+}
     </style>
 </body>
 </html>
