--- a/templates/db.html
+++ b/templates/db.html
@@ -1719,12 +1719,18 @@ body {
   justify-self: center;
 }
 #newContent {
-            background-color: #1a1a3d;
+            background-color: rgb(5, 1, 24);
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+            box-shadow: 
+        0 1px 3px rgba(0, 0, 0, 0.12), 
+        0 1px 2px rgba(0, 0, 0, 0.24), 
+        0 5px 15px rgba(0, 255, 255, 0.5), 
+        0 10px 20px rgba(255, 0, 255, 0.5);
             width: 80%;
-            max-width: 800px;
+            max-width: 1000px;
             padding: 20px;
+            max-height: 400px;
         }
         #newContent h1 {
             font-size: 24px;
@@ -1744,13 +1750,13 @@ body {
         #newContent table th, #newContent table td {
             padding: 12px 15px;
             text-align: left;
-            border: 1px solid #444477;
+            border: 1px solid red;
         }
         #newContent table th {
-            border-bottom: 2px solid #444477;
+            border-bottom: 2px solid #2d1ead;
         }
         #newContent table tbody tr:nth-child(even) {
-            background-color: #2a2a55;
+            background-color: #0dd69a;
         }
         #newContent button {
             background-color: #0056b3;
@@ -1773,7 +1779,7 @@ body {
         }
         #newContent .details div {
             padding: 10px;
-            background-color: #1a1a3d;
+            background-color: #040120;
             border: 1px solid #444477;
             border-radius: 4px;
         }
@@ -1788,7 +1794,7 @@ body {
             border: 1px solid #666666;
             border-radius: 4px;
             margin-bottom: 10px;
-            background-color: #2a2a55;
+            border: 1px solid #2a2a55;
             color: #ffffff;
         }
         #newContent .loader {
